--- a/Scraping/f1db_csv/Formula_1_testing.ipynb
+++ b/Scraping/f1db_csv/Formula_1_testing.ipynb
@@ -11,28 +11,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-07-21T09:02:08.014271Z",
-     "start_time": "2023-07-21T09:02:08.012610Z"
+     "end_time": "2023-07-22T06:40:07.082135Z",
+     "start_time": "2023-07-22T06:40:05.752139Z"
     }
    },
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (2062548002.py, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;36m  Cell \u001B[0;32mIn[27], line 2\u001B[0;36m\u001B[0m\n\u001B[0;31m    import\u001B[0m\n\u001B[0m          ^\u001B[0m\n\u001B[0;31mSyntaxError\u001B[0m\u001B[0;31m:\u001B[0m invalid syntax\n"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/nirmolcho/opt/anaconda3/lib/python3.9/ds_final_task/lib/python3.9/site-packages/urllib3/__init__.py:34: NotOpenSSLWarning: urllib3 v2.0 only supports OpenSSL 1.1.1+, currently the 'ssl' module is compiled with 'LibreSSL 2.8.3'. See: https://github.com/urllib3/urllib3/issues/3020\n",
+      "  warnings.warn(\n"
      ]
     }
    ],
    "source": [
     "import pandas as pd\n",
-    "import\n",
-    "import fastf1"
+    "import requests\n",
+    "import fastf1 as ff1"
    ]
   },
   {
