cleaning the data and EDAs

--- a/Clustering/class_task_in_clustering/Clustering_task1.ipynb
+++ b/Clustering/class_task_in_clustering/Clustering_task1.ipynb
@@ -788,30 +788,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-10T12:20:12.245193Z",
-     "start_time": "2023-06-10T12:20:12.206797Z"
+     "end_time": "2023-07-28T08:16:01.644928Z",
+     "start_time": "2023-07-28T08:16:01.396144Z"
     }
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Feature: Total_Amount_Spent\n",
-      "r2 score: 0.04133445983422113\n",
-      "\n",
-      "\n",
-      "Feature: Count_invoice\n",
-      "r2 score: -0.6988370288774379\n",
-      "\n",
-      "\n",
-      "Feature: Last_transaction\n",
-      "r2 score: -1.0128808086660532\n",
-      "\n",
-      "\n"
+     "ename": "NameError",
+     "evalue": "name 'mergedf' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[1], line 1\u001B[0m\n\u001B[0;32m----> 1\u001B[0m X \u001B[38;5;241m=\u001B[39m \u001B[43mmergedf\u001B[49m\u001B[38;5;241m.\u001B[39mdrop(feature, axis\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m1\u001B[39m)\n\u001B[1;32m      2\u001B[0m y \u001B[38;5;241m=\u001B[39m mergedf[feature]\n\u001B[1;32m      3\u001B[0m X_train, X_test, y_train, y_test \u001B[38;5;241m=\u001B[39m train_test_split(X, y, test_size\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m0.3\u001B[39m, random_state\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m101\u001B[39m)\n",
+      "\u001B[0;31mNameError\u001B[0m: name 'mergedf' is not defined"
      ]
     }
    ],
