--- a/Scraping/exporting_jsons_files.ipynb
+++ b/Scraping/exporting_jsons_files.ipynb
@@ -11,17 +11,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/nirmolcho/opt/anaconda3/lib/python3.9/ds_final_task/lib/python3.9/site-packages/urllib3/__init__.py:34: NotOpenSSLWarning: urllib3 v2.0 only supports OpenSSL 1.1.1+, currently the 'ssl' module is compiled with 'LibreSSL 2.8.3'. See: https://github.com/urllib3/urllib3/issues/3020\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "execution_count": 2,
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import requests\n",
@@ -31,33 +22,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-28T05:59:40.656310Z",
-     "start_time": "2023-07-28T05:59:39.070886Z"
+     "end_time": "2023-07-28T07:37:15.583073Z",
+     "start_time": "2023-07-28T07:37:15.579308Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloaded file: circuits.json\n",
-      "Downloaded file: constructorStandings.json\n",
-      "Downloaded file: constructors.json\n",
-      "Downloaded file: driverstandings.json\n",
-      "Downloaded file: drivers.json\n",
-      "Downloaded file: qualifying.json\n",
-      "Downloaded file: races.json\n",
-      "Downloaded file: results.json\n",
-      "Downloaded file: seasons.json\n",
-      "Downloaded file: sprint.json\n",
-      "Downloaded file: status.json\n"
-     ]
-    }
-   ],
+   "execution_count": 3,
+   "outputs": [],
    "source": [
     "import requests\n",
     "import os\n",
@@ -74,6 +47,7 @@
     "    \"http://ergast.com/api/f1/seasons.json\",\n",
     "    \"https://ergast.com/api/f1/sprint.json\",\n",
     "    \"http://ergast.com/api/f1/status.json\",\n",
+    "    \"https://ergast.com/docs/f1db_user_guide.txt\"\n",
     "]\n",
     "for url in base_urls:\n",
     "    response = requests.get(url)\n",
@@ -82,7 +56,11 @@
     "        file.write(response.content)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-07-28T07:37:34.873402Z",
+     "start_time": "2023-07-28T07:37:17.615618Z"
+    }
    }
   },
   {
