3 models of clustering

--- a/Scraping/exporting_jsons_files.ipynb
+++ b/Scraping/exporting_jsons_files.ipynb
@@ -3,6 +3,17 @@
   {
    "cell_type": "markdown",
    "source": [
+    "#### import the proxy here"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
     "#pip install fastf1"
    ],
    "metadata": {
@@ -29,6 +40,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "API_KEY = ‘YOUR_API_KEY’\n",
+    "\n",
+    "def get_scraperapi_url(url):\n",
+    "    \"\"\"\n",
+    "        Converts url into API request for ScraperAPI.\n",
+    "    \"\"\"\n",
+    "    payload = {'api_key': API_KEY, 'url': url}\n",
+    "    proxy_url = 'http://api.scraperapi.com/?' + urlencode(payload)\n",
+    "    return proxy_url"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "outputs": [],
    "source": [
@@ -50,7 +80,9 @@
     "    \"https://ergast.com/docs/f1db_user_guide.txt\"\n",
     "]\n",
     "for url in base_urls:\n",
-    "    response = requests.get(url)\n",
+    "    payload = {'api_key': 'APIKEY', 'url': 'https://httpbin.org/ip'}\n",
+    "    driver.get(get_scraperapi_url(url))\n",
+    "    response = requests.get('http://api.scraperapi.com', params=payload)\n",
     "    file_name = os.path.basename(url)\n",
     "    with open(file_name, 'wb') as file:\n",
     "        file.write(response.content)"
