orgenizing for part 2

--- a/Scraping/f1_explore_db.ipynb
+++ b/Scraping/f1_explore_db.ipynb
@@ -18,8 +18,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "outputs": [],
+   "execution_count": 1,
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'pd' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[1], line 1\u001B[0m\n\u001B[0;32m----> 1\u001B[0m circuits \u001B[38;5;241m=\u001B[39m \u001B[43mpd\u001B[49m\u001B[38;5;241m.\u001B[39mread_csv(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mf1db_csv/circuits.csv\u001B[39m\u001B[38;5;124m'\u001B[39m)\n\u001B[1;32m      2\u001B[0m constructor_results \u001B[38;5;241m=\u001B[39m pd\u001B[38;5;241m.\u001B[39mread_csv(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mf1db_csv/constructor_results.csv\u001B[39m\u001B[38;5;124m'\u001B[39m)\n\u001B[1;32m      3\u001B[0m constructor_standings \u001B[38;5;241m=\u001B[39m pd\u001B[38;5;241m.\u001B[39mread_csv(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mf1db_csv/constructor_standings.csv\u001B[39m\u001B[38;5;124m'\u001B[39m)\n",
+      "\u001B[0;31mNameError\u001B[0m: name 'pd' is not defined"
+     ]
+    }
+   ],
    "source": [
     "circuits = pd.read_csv('f1db_csv/circuits.csv')\n",
     "constructor_results = pd.read_csv('f1db_csv/constructor_results.csv')\n",
@@ -39,9 +51,18 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-26T07:18:37.369195Z",
-     "start_time": "2023-07-26T07:18:37.102439Z"
+     "end_time": "2023-08-14T08:12:23.268852Z",
+     "start_time": "2023-08-14T08:12:23.011727Z"
     }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
    }
   },
   {
