data for s&p first EDA of the data

--- a/time_series/time_series_preiction.ipynb
+++ b/time_series/time_series_preiction.ipynb
@@ -3,12 +3,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "outputs": [],
-   "source": [],
+   "id": "initial_id",
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
-   "id": "3261c056ed70b24a"
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
